@@ -7,7 +7,6 @@ class LeadsController < ApplicationController
   #----------------------------------------------------------------------------
   def index
     @leads = Lead.find(:all)
-    @status = Setting.lead_status
 
     respond_to do |format|
       format.html # index.html.erb
@@ -32,6 +31,8 @@ class LeadsController < ApplicationController
   #----------------------------------------------------------------------------
   def new
     @lead = Lead.new
+    @users = User.all_except(@current_user)
+    @campaigns = Campaign.find(:all)
 
     respond_to do |format|
       format.html # new.html.erb
@@ -99,26 +100,6 @@ class LeadsController < ApplicationController
   # POST /leads/1.xml
   #----------------------------------------------------------------------------
   def convert
-  end
-
-  #----------------------------------------------------------------------------
-  def auto_complete_for_lead_assigned_to
-    @users = User.find(:all).each do |user|
-      user[:full_name] = user.full_name
-    end
-    render :inline => "<%= auto_complete_result @users, :full_name, params[:lead][:assigned_to] %>"
-  end
-
-  #----------------------------------------------------------------------------
-  def auto_complete_for_lead_campaign
-    @campaigns = Campaign.find(:all)
-    render :inline => "<%= auto_complete_result @campaigns, :name, params[:lead][:campaign] %>"
-  end
-
-  #----------------------------------------------------------------------------
-  def auto_complete_for_lead_status
-    @status = Setting.lead_status.values.map { |s| s[:label] }
-    render :inline => "<%= '<ul><li>' << @status.join('</li><li>') << '</li></ul>' %>"
   end
 
 end
