@@ -1,4 +1,13 @@
-Fri, Dec 18, 2008
+Sat, Dec 21, 2008
+---------------------------------------------------------------------
+- Redesigned [Lead/New] and revamped related CSS styles.
+- Reorganized global settings to make it easier to access them at runtime.
+
+Sat, Dec 20, 2008
+---------------------------------------------------------------------
+- Metallica show at Oakland Coliseum was totally amazing!
+
+Fri, Dec 19, 2008
 ---------------------------------------------------------------------
 - Replaced stub text fields with autocomplete in [Leads/New].
 
